# PyPackPrepData

./: README.md  pyproject.toml
src/: MyBadCodeTests.ipynb  My_Little_test_PrepData.py  prepData.py
src/PrepData/: PrepData.py  __init__.py  test1.py  tests.py
src/pd/: prepData.py
src/preprocess_data.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: Tests.ipynb  test1.py
tests/test1/: test1.py
