[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "preprocess-data"
version = "0.0.8"
authors = [
  { name="DZ" },
]

description = "package for preprocessing data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Dimitriy200/prepData"

[tool.hatch.build.targets.wheel]
packages = ["src/prepData"]