[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "preprocess-data"
version = "0.1.1"
authors = [
  { name="DZ" },
]

dependencies = [
  "numpy>=1.22.1",
  "scikit-learn",
  "setuptools==57.5.0",
]

description = "package for preprocessing data"
readme = "README.md"
requires-python = ">=3.8.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Dimitriy200/prepData"

[tool.hatch.build.targets.wheel]
packages = ["src/prepData"]