[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "preprocess-data"
version = "0.1.10"
authors = [
  { name="DZ" },
]

dependencies = [
  "setuptools>=40.8.0",
  "numpy",
  "scikit-learn",
]

description = "package for preprocessing data"
readme = "README.md"

requires-python = ">=3.10.0"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Dimitriy200/prepData"

[tool.hatch.build.targets.wheel]
packages = ["src/prepData"]